Bug 1864339 - Fix hdrForFirstSelectedMessage for multi-folder views. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D193385

--HG--
extra : moz-landing-system : lando